[package]
name = "potion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]

[features]
routing = ["macros"]
typescript = ["wsc", "minify-js"]

[dependencies]
handlebars = "5.1.2"
serde = "1.0.197"
serde_json = "1.0.115"
warp = "0.3.7"
sqlx = { version = "0.7.4", features = [ "postgres" ]}
urlencoding = "2.1.3"
minify-js = { version = "0.6.0", optional = true }
minify-html = "0.15.0"

[dependencies.macros]
path = "./macros"
optional = true

[dependencies.wsc]
path = "./wsc"
optional = true